# pythongit

Expense_TripDD/: README.md  app.py  config.py  pyproject.toml  requirements.txt  run.py  setup.py
Expense_TripDD/app/: Test Trip Country City new.py  Test Trip Country City.py  Trip City Data.py  Trip Country City.py  __init__.py  dataconnection.py  insertcity.py
Expense_TripDD/app/demo/: ball_fee_calc.py  bao.py  harry.py  image.py  magic.py  证明.py  验证码.py
Expense_TripDD/tests/: createfilepath.py  excel1.py  huya.py  music.html  pdf.py  rate.csv  rate.html  rate.py  spider.py  spider2.py  test1.csv  tests.py
